K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx #use nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: coffee-shop.me
      http:
        paths:
          #all requests to http://coffee-shop.me/api/user
          #will be forwarded to user-cluster-ip-service:80
          #which in turn will forward them to user-service:8080
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-cluster-ip-service
                port:
                  number: 80
          #all requests to http://coffee-shop.me/api/coffee
          #will be forwarded to coffee-cluster-ip-service:80
          #which in turn will forward them to coffee-service:8080
          - path: /api/coffee
            pathType: Prefix
            backend:
              service:
                name: coffee-cluster-ip-service
                port:
                  number: 80
          #all requests to http://coffee-shop.me/api/favorite
          #will be forwarded to favorite-cluster-ip-service:80
          #which in turn will forward them to favorite-service:8080
          - path: /api/favorite
            pathType: Prefix
            backend:
              service:
                name: favorite-cluster-ip-service
                port:
                  number: 80
